# level2-3-cv-finalproject-cv-13

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
EDA/: ASH_T6094_EDA.ipynb  LJH_T6132_EDA.ipynb  YHJ_T6106_EDA.ipynb  split.ipynb
backend/: .dockerignore  .gitignore  Dockerfile  README.md  auto_docs.py  base_document.docx  config.py  main.py  main_lifespan.py  model.py  pyproject.toml  result.json  sampledata.json  schemas.py  template.json  utils.py
backend/model/: config.json
backend/pytorch_grad_cam/: base_cam.py
backend/pytorch_grad_cam/utils/: image.py
frontend/: Dockerfile  INSTALL.md  README.md  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/public/: index.html
frontend/src/: setupProxy.js
frontend/src/Components/: #UploaderBase.js  ACLResultsAxial.css  ACLResultsAxial.js  ACLResultsCoronal.css  ACLResultsCoronal.js  ACLResultsSagittal.css  ACLResultsSagittal.js  AbnormalResultsAxial.css  AbnormalResultsAxial.js  AbnormalResultsCoronal.css  AbnormalResultsCoronal.js  AbnormalResultsSagittal.css  AbnormalResultsSagittal.js  AxialResults.css  AxialResults.js  CoronalResults.css  CoronalResults.js  FirstImpression.css  FirstImpression.js  FirstImpressionDCM.css  FirstImpressionDCM.js  InputScreen.css  InputScreen.js  InputTemplate.css  InputTemplate.js  Loading.css  Loading.js  LoadingScreen.css  LoadingScreen.js  MeniscusResultsAxial.css  MeniscusResultsAxial.js  MeniscusResultsCoronal.css  MeniscusResultsCoronal.js  MeniscusResultsSagittal.css  MeniscusResultsSagittal.js  PlaneResultTemplate.css  (+16 more)
modeling/: 3d_gradcam.py  3d_train.py  INSTALL.md  README.md  StratifiedGroupKFold_split.py  auto_docs.py  base_document.docx  cam_config.yaml  config.yaml  dataloader.py  dcm_convert.py  delete_list.txt  fusion.py  fusion_config.yaml  gradcam.py  inference.py  loss.py  metric.py  model.py  new_train_test.ipynb  optimizer.py  pyproject.toml  scheduler.py  split.ipynb  train.py
modeling/configs/: config.yaml  config6.yaml
modeling/pytorch_grad_cam/utils/: image.py
(+2 files in other folders)
