[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["patrashu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.0"
uvicorn = "0.27.1"
timm = "0.9.16"
transformers = "4.38.1"
Pillow = "10.2.0"
numpy = "1.26.4"
pandas = "2.0.0"
opencv-python = "4.9.0.80"
python-multipart = "^0.0.9"
scikit-learn = "^1.4.1.post1"
ttach = "^0.0.3"
matplotlib = "^3.8.3"
pydicom = "^2.4.4"
pydantic-settings = "^2.2.1"
python-docx = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
